fix: Searchbar Width on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,7 @@
 
 @media (max-width: 768px) {
   .ui.icon.input > input {
-    width:50vmax; /* Ocupa todo el ancho disponible */
+    width:45vmax; /* Ocupa todo el ancho disponible */
     transition: all ease 0.2s;
   }
 }
